# CE5303-Introduction-to-Embedded-Systems-Workshops

./: README.md
Final-Exam/: exam.c  rle.py
Tutorial1-Yocto/: config.sh
Workshop1 - Linux/: Ejercicio1.txt
Workshop1 - Linux/Ej3/: script.x
Workshop1 - Linux/Ej4/: laodisea00homeuoft_djvu.txt
Workshop1 - Linux/Ej5/: Ejercicio5.txt
Workshop1-Linux/: Ej1.sh  Ejercicio2.txt  Ejercicios.tar
Workshop10-RPi-GPIO/: README.md
Workshop10-RPi-GPIO/gpio-driver/: gpio.c
Workshop10-RPi-GPIO/libdgpio/: configure.ac
Workshop10-RPi-GPIO/raspb-drivers/: uart.c  uart2.c
Workshop11-KPN/: fibonacci.py  sum.py
Workshop2 - GCC/: .gitignore  Makefile
Workshop2-GCC/: calculadora.c
Workshop2-GCC/lmath/: lmath.c  lmath.h
Workshop3-Make/: .gitignore  Makefile
Workshop3-Make/lib/: Makefile  operaciones.c
Workshop3-Make/src/: Makefile  calculadora.c
Workshop4-Autotools/: .gitignore
Workshop4-Autotools/helloworld/: 1_config.sh  2_build_and_install.sh  3_create_package.sh  4_delete.sh  configure.ac
Workshop4-Autotools/libhello/: 1_config.sh  2_build_and_install.sh  3_create_package.sh  4_delete.sh  configure.ac
Workshop4-Autotools/libpng/: 1_download.sh  2_config.sh  3_build_and_install.sh  4_delete.sh
Workshop5-CMake/libmath/lib/: CMakeLists.txt
Workshop5-CMake/libsayhello/lib/: CMakeLists.txt  say.c
Workshop6-Yocto/: .gitignore  1_installation.sh  2_config.sh  3_build.sh  4_emulate.sh
Workshop7-YoctoII/: .gitignore
Workshop9-Drivers-in-Raspberry-Pi/: .gitignore  1_installation.sh  2_config.sh  3_build.sh  4_copy_to_sd.sh
(+51 files in other folders)
